--- a/Bonobo.Git.Server/Content/Site.css
+++ b/Bonobo.Git.Server/Content/Site.css
@@ -38,9 +38,31 @@ pre code { font-family: Consolas, monospace; }
 textarea.medium, input.medium { width: 30em; }
 textarea.large, input.large { width: 40em;height: 17em; }
 div.pure-control-group.checkboxlist>span { display: inline-block; }
+.return-to-dropdown {
+    position: absolute;
+    top: 5px;
+    border-radius: 5px;
+    right: 3px;
+    z-index: 2;
+    border: none;
+    top: 2px;
+    height: 30px;
+    cursor: pointer;
+    color: white;
+    background-color: #1e90ff;
+    transform: translateX(2px);
+}
+.pure-control-group .new-known-dependency {
+    margin: 0px;
+    display: none;
+    position: relative;
+}
 
 
-table.repositories button.copy-to-clip-button { margin-left: 0px; border-radius: 5px; }
+table.repositories button.copy-to-clip-button {
+    margin-left: 0px;
+    border-radius: 5px;
+}
 
 .navigation { padding: 0.5em 0; text-align: right;}
 .navigation.pure-menu a.pure-menu-heading { color: white; font-weight: 300; font-size: 1.2em; background: url('images/git-logo.png') no-repeat 0 4px; padding-left: 40px; float: left; margin-left: 0.5em;}
