--- a/Bonobo.Git.Server/Views/Repository/Create.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Create.cshtml
@@ -128,7 +128,7 @@
                         <input class="form-control" id="Dependencies[{i}].Id" name="Dependencies[{i}].Id" readonly disabled />
                     </th>
                     <th class="pure-control-group">
-                        <div style="display:none;"> <input id="Dependencies_{i}__KnownDependency_ComponentName" name="Dependencies[{i}].KnownDependency.ComponentName" type="text" style = "width: 250px;"></div>
+                        <div style="display:none;"> <input id="Dependencies_{i}__KnownDependency_ComponentName" name="Dependencies[{i}].KnownDependency.ComponentName" type="text" style="width: 250px;"></div>
                         <span class="field-validation-valid" data-valmsg-for="Dependencies[{i}].KnownDependency.ComponentName" data-valmsg-replace="true"></span>
                         <select class="dropDownKD valid" data-val="true" data-val-required="The KnownDependenciesId field is required." id="Dependencies_{i}__KnownDependenciesId" name="Dependencies[{i}].KnownDependenciesId" onchange="javascript: DisplayComponentNameNewInputField(this.id)" style="width: 250px" aria-required="true" aria-invalid="false">
                             @{
@@ -142,10 +142,10 @@
                                 }
                             }
                         </select>
-                    </th>
-                    <th class="pure-control-group" id="newKD-Dependencies_{i}__KnownDependenciesId" style="display: none;">
-                        <label class="pure-form-aligned pure-control-group"></label>
-                        <input class="pure-form valid" id="KDInputDependencies_{i}__KnownDependenciesId" type="text">
+                        <div class="pure-control-group new-known-dependency" id="newKD-Dependencies_{i}__KnownDependenciesId">
+                            <input class="pure-form valid" id="KDInputDependencies_{i}__KnownDependenciesId" type="text" onfocusout="checkIfKDExists(this.id)" style="width:250px;">
+                            <button class="return-to-dropdown" type="button" id="{i}" onclick="returnToDropdownFromKDInput(this.id)" title="Return to Dropdown" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-times-circle"></i></button>
+                        </div>
                     </th>
                     <th class="col pure-control-group">
                         <input class="form-control" id="Dependencies_{i}__.VersionInUse" name="Dependencies[{i}].VersionInUse" />
@@ -182,12 +182,12 @@
 <script>
     function DisplayComponentNameNewInputField(dropDownID) {
         inputField = document.getElementById("KDInput" + dropDownID);
-        console.log("KDInput" + dropDownID);
-        console.log("KDInputDependencies_2__KnownDependenciesId");
         dropDown = document.getElementById(dropDownID);
         selectedValue = dropDown[dropDown.selectedIndex].text;
         if (selectedValue == "Add New...") {
+            console.log("Drop down id = ", dropDownID);
             $("#newKD-" + dropDownID).css("display", "inline-block");
+            $("#" + dropDownID).css("display", "none");
             changeNameOfInput(inputField, dropDown, 1);
         } else {
             $("#newKD-" + dropDownID).css("display", "none");
@@ -225,9 +225,17 @@
         }
     }
 
-    function changeNameOfInput(inputField, dropDown, addNewSelected) {          // tomorrow start working on backend stuff, first how to prevent the default if model state is not valid stuff so that I can then actually test the other stuff in the backend
+    function returnToDropdownFromKDInput(i) {
+        dropDownID = "Dependencies_" + i + "__KnownDependenciesId";
+        $("#" + dropDownID).css("display", "inline-block");
+        $("#newKD-" + dropDownID).css("display", "none");
+
+        document.getElementById("KDInput" + dropDownID).value = "";
+        document.getElementById(dropDownID).selectedIndex = 0;
+    }
+
+    function changeNameOfInput(inputField, dropDown, addNewSelected) {
         if (addNewSelected) {
-            console.log(inputField);
             inputField.setAttribute("name", dropDown.name);
             dropDown.setAttribute("name", "");
         } else if (dropDown.name == "") {
