--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -342,13 +342,9 @@ else
         dropDown = document.getElementById(dropDownID);
         selectedValue = dropDown[dropDown.selectedIndex].text;
         if (selectedValue == "Add New...") {
-            console.log("Drop down id = ", dropDownID);
             $("#newKD-" + dropDownID).css("display", "inline-block");
             $("#" + dropDownID).css("display", "none");
             changeNameOfInput(inputField, dropDown, 1);
-        } else {
-            $("#newKD-" + dropDownID).css("display", "none");
-            changeNameOfInput(inputField, dropDown, 0);
         }
     }
 
@@ -372,7 +368,7 @@ else
             //    document.getElementById(inputID).focus();
             //}
             //window.confirm("the component name entered already exists");
-            alert("the component name entered already exists");
+            //alert("the component name entered already exists");
             //if (!alert("the component name entered already exists")) {
             //    document.getElementById(inputID).focus();
             //}
@@ -389,6 +385,8 @@ else
 
         document.getElementById("KDInput" + dropDownID).value = "";
         document.getElementById(dropDownID).selectedIndex = 0;
+
+        changeNameOfInput(inputField, dropDown, 0);
     }
 
     function changeNameOfInput(inputField, dropDown, addNewSelected) {
