--- a/Bonobo.Git.Server/Content/dropdown.css
+++ b/Bonobo.Git.Server/Content/dropdown.css
@@ -7,7 +7,7 @@
     line-height: 1.5em;
     border: 1px solid transparent;
 }
-#dropdownBox {
+.dropdownBox{
     position: relative;
     width: 500px;
     background: white;
@@ -17,17 +17,17 @@
     right: 45%;
     border-style: outset;
 }
-#dropdownBox input {
+.dropdownBox input {
     left: 28%;
     position: absolute;
     width: 320px;
 }
-  
-#dropdownBox label{
-    position:relative;
+
+.dropdownBox label {
+    position: relative;
     left: 20px;
 }
-#dropdownBox .copy-to-clip-button {
+.dropdownBox .copy-to-clip-button {
     font-size: 12px;
     padding: 4px;
     width: 15px;
@@ -35,7 +35,7 @@
     right: 25px;
     background-color: white;
 }
-#dropbuttons{
+.dropbuttons{
     margin-top:10px;
 }
 
