--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -297,7 +297,7 @@ else
                         @Html.ValidationMessageFor(m => m.Dependencies[i].VersionInUse)
                     </th>
                     <th class="pure-control-group">
-                        @{var depId = "Dependencies_" + i + "__.DateUpdated";
+                        @{var dependencyId = "Dependencies_" + i + "__.DateUpdated";
                             var formattedDate = "1900-01-01";
                             if (Model.Dependencies[i].DateUpdated != null)
                             {
@@ -305,7 +305,7 @@ else
                                 formattedDate = dateValue[2].Substring(0, 4) + "-" + (dateValue[0].Length == 1 ? "0" + dateValue[0] : dateValue[0]) + "-" + (dateValue[1].Length == 1 ? "0" + dateValue[1] : dateValue[1]);
                             }
                         }
-                            <input class="form-control" type="date" id="@depId" name="Dependencies[@i].DateUpdated" value="@formattedDate" />
+                            <input class="form-control" type="date" id="@dependencyId" name="Dependencies[@i].DateUpdated" value="@formattedDate" />
                         @Html.ValidationMessageFor(m => m.Dependencies[i].DateUpdated)
                     </th>
                     <th>
