--- a/Bonobo.Git.Server/Views/Repository/Create.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Create.cshtml
@@ -110,7 +110,7 @@
     <div class="pure-control-group">
         <button type="button" onclick=" newField();" class="pure-button pure-button-primary"> <i class="fa fa-plus-circle"></i> @Resources.SA_Add </button>
     </div>
-    <fieldset class="pure-control-group" style="padding-top:10px;">
+    <fieldset class="pure-control-group add-little-padding">
         <legend>
             @Resources.Dependencies
         </legend>
@@ -123,14 +123,14 @@
             </table>
             <template id="Dependencyrow">
                 <tr class="row Dependencies-details" id="Dependencies_{i}" name="Dependencies-details">
-                    <th class=" col pure-control-group" style="display:none;">
+                    <th class=" col pure-control-group hidden">
                         <label> @Resources.Dependencies_ID </label>
                         <input class="form-control" id="Dependencies[{i}].Id" name="Dependencies[{i}].Id" readonly disabled />
                     </th>
                     <th class="pure-control-group">
-                        <div style="display:none;"> <input id="Dependencies_{i}__KnownDependency_ComponentName" name="Dependencies[{i}].KnownDependency.ComponentName" type="text" style="width: 250px;"></div>
+                        <div class="hidden"> <input class="field-width" id="Dependencies_{i}__KnownDependency_ComponentName" name="Dependencies[{i}].KnownDependency.ComponentName" type="text"></div>
                         <span class="field-validation-valid" data-valmsg-for="Dependencies[{i}].KnownDependency.ComponentName" data-valmsg-replace="true"></span>
-                        <select class="dropDownKD valid" data-val="true" data-val-required="The KnownDependenciesId field is required." id="Dependencies_{i}__KnownDependenciesId" name="Dependencies[{i}].KnownDependenciesId" onchange="javascript: DisplayComponentNameNewInputField(this.id)" style="width: 250px" aria-required="true" aria-invalid="false">
+                        <select class="dropDownKD valid field-width" data-val="true" data-val-required="The KnownDependenciesId field is required." id="Dependencies_{i}__KnownDependenciesId" name="Dependencies[{i}].KnownDependenciesId" onchange="javascript: DisplayComponentNameNewInputField(this.id)" aria-required="true" aria-invalid="false">
                             @{
                                 if (Model.KnownDependencies != null)
                                 {
@@ -143,8 +143,8 @@
                             }
                         </select>
                         <div class="pure-control-group new-known-dependency" id="newKD-Dependencies_{i}__KnownDependenciesId">
-                            <input class="pure-form valid" id="KDInputDependencies_{i}__KnownDependenciesId" type="text" style="width:250px;">
-                            <button class="return-to-dropdown" type="button" id="{i}" onclick="returnToDropdownFromKDInput(this.id)" title="Return to dropdown" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-times-circle"></i></button>
+                            <input class="pure-form valid field-width" id="KDInputDependencies_{i}__KnownDependenciesId" type="text">
+                            <button class="return-to-dropdown rem-btn" type="button" id="{i}" onclick="returnToDropdownFromKDInput(this.id)" title="Return to dropdown" ><i class="fa fa-times-circle"></i></button>
                         </div>
                     </th>
                     <th class="col pure-control-group">
@@ -163,7 +163,7 @@
                         </span>
                         <th />
                     <th>
-                        <button type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_{i}" title="Remove Dependency" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                        <button type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_{i}" title="Remove Dependency" class="rem-btn"><i class="fa fa-minus-circle"></i></button>
                     </th>
                 </tr>
             </template>
