--- a/Bonobo.Git.Server/Views/Repository/Detail.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Detail.cshtml
@@ -109,7 +109,7 @@
             {
                 foreach (Bonobo.Git.Server.Data.ServiceAccount serviceAccount in Model.ServiceAccounts)
                 {
-                    <details style="display:block;">
+                    <details>
                         <summary>
                             <div class="sidebar-text">
                                 <i class="fa fa-chevron-down"></i><input class="removeVisualInput" value="@serviceAccount.ServiceAccountName" readonly />
@@ -149,7 +149,7 @@
             <div>
                 @foreach (Bonobo.Git.Server.Data.Dependency dependency in Model.Dependencies)
                 {
-                    <details style="display: inline-block; overflow: hidden; white-space: nowrap;">
+                    <details class="dependency-details">
                         <summary>
                             <div class="sidebar-text">
                                 @{
@@ -160,8 +160,8 @@
                                         VersionInUseFormat2 = (VersionInUseFormat.Length == 1 ? VersionInUseFormat[(0)] : $"({VersionInUseFormat[0]}.{VersionInUseFormat[1]})");
                                     }
                                 }
-                                <i class="fa fa-chevron-down"></i><label for="@dependency.Id" type="text" style="display:inline; font-size: 100%; padding-right:5px; font-weight:normal; " class="removeVisualInput" readonly> @dependency.KnownDependency.ComponentName</label><input style="text-overflow: ellipsis; " class="removeVisualInput" value="@VersionInUseFormat2" readonly="">
-                                <input type="text" id="@dependency.Id" style="display:none;" class="removeVisualInput" value="@dependency.KnownDependency.ComponentName" readonly>
+                                <i class="fa fa-chevron-down"></i><label for="@dependency.Id" type="text" class="removeVisualInput dependency-label " readonly> @dependency.KnownDependency.ComponentName</label><input class="removeVisualInput overflow-ellipsis" value="@VersionInUseFormat2" readonly="">
+                                <input type="text" id="@dependency.Id" value="@dependency.KnownDependency.ComponentName" hidden>
                             </div>
                         </summary>
                         <div class="pass-info">
