--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -141,7 +141,7 @@ else
     </div>
 
     <fieldset class="pure-control-group">
-        <legend style="padding-top: 30px;">
+        <legend class="add-some-padding">
             @Resources.SA
         </legend>
        
@@ -158,37 +158,33 @@ else
         var btnId = "ServiceAccountBtn_" + i;
         <tr class="row service-account-details" id="@id">
             <th class=" col pure-control-group">
-                @*@Html.LabelFor(m => m.ServiceAccounts[i].ServiceAccountName)*@
                 @Html.TextBoxFor(m => m.ServiceAccounts[i].ServiceAccountName, htmlAttributes: new { @style = "width: 250px;" })
                 @Html.ValidationMessageFor(m => m.ServiceAccounts[i].ServiceAccountName)
                 @{ }
             </th>
             <th class="col pure-control-group">
-                @*@Html.LabelFor(m => m.ServiceAccounts[i].PassLastUpdated)*@
-                @*@Html.TextBoxFor(m => m.ServiceAccounts[i].PassLastUpdated)*@
-                @{var saId = "ServiceAccounts_" + i + "__.PassLastUpdated";
+                @{var serviceAccountId = "ServiceAccounts_" + i + "__.PassLastUpdated";
                     if (Model.ServiceAccounts[i].PassLastUpdated != null)
                     {
                         var dateValue = Model.ServiceAccounts[i].PassLastUpdated.ToString().Split('/');
                         var formattedDate = dateValue[2].Substring(0, 4) + "-" + (dateValue[0].Length == 1 ? "0" + dateValue[0] : dateValue[0]) + "-" + (dateValue[1].Length == 1 ? "0" + dateValue[1] : dateValue[1]);
-                        <input class="form-control" type="date" id="@saId" name="ServiceAccounts[@i].PassLastUpdated" value="@formattedDate" onfocus="console.log(this.value)" />
+                        <input class="form-control" type="date" id="@serviceAccountId" name="ServiceAccounts[@i].PassLastUpdated" value="@formattedDate" onfocus="console.log(this.value)" />
                     }
                     else
                     {
-                        <input class="form-control" type="date" id="@saId" name="ServiceAccounts[@i].PassLastUpdated" onfocus="console.log(this.value)" />
+                        <input class="form-control" type="date" id="@serviceAccountId" name="ServiceAccounts[@i].PassLastUpdated" onfocus="console.log(this.value)" />
                     }
                 }
                 @Html.ValidationMessageFor(m => m.ServiceAccounts[i].PassLastUpdated)
             </th>
             <th class="col pure-control-group">
-                @*@Html.LabelFor(m => m.ServiceAccounts[i].InPassManager)*@
                 @Html.CheckBoxFor(m => m.ServiceAccounts[i].InPassManager)
                 @Html.ValidationMessageFor(m => m.ServiceAccounts[i].InPassManager)
             </th>
             <th>
-                <button type="button" onclick=" remField(this.id);" id="@btnId" title="Remove Service Account" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                <button type="button" onclick=" remField(this.id);" id="@btnId" title="Remove Service Account" class="rem-btn"><i class="fa fa-minus-circle"></i></button>
             </th>
-            <th class="col pure-control-group" style="display:none;">
+            <th class="col pure-control-group hidden">
                 @Html.LabelFor(m => m.ServiceAccounts[i].Id)
                 @Html.TextBoxFor(m => m.ServiceAccounts[i].Id)
                 @Html.LabelFor(m => m.ServiceAccounts[i].RepositoryId)
@@ -204,21 +200,21 @@ else
     <div class="pure-control-group">
         <button type="button" onclick=" newField(@Model.ServiceAccounts.Count);" class="pure-button pure-button-primary"> <i class="fa fa-plus-circle"></i> @Resources.SA_Add </button>
     </div>
-    <fieldset class="pure-control-group" style="padding-top:10px;">
-        <legend style="padding-top:30px;">
+    <fieldset class="pure-control-group add-little-padding">
+        <legend class="add-some-padding">
             @Resources.Dependencies
         </legend>
 
         <template id="Dependencyrow">
             <tr class="row Dependencies-details" id="Dependencies_{i}" name="Dependencies-details">
-                <th class=" col pure-control-group" style="display:none;">
+                <th class=" col pure-control-group hidden">
                     <label> @Resources.Dependencies_ID </label>
                     <input class="form-control" id="Dependencies[{i}].Id" name="Dependencies[{i}].Id" readonly disabled />
                 </th>
                 <th class="pure-control-group">
-                    <div style="display:none;"> <input id="Dependencies_{i}__KnownDependency_ComponentName" name="Dependencies[{i}].KnownDependency.ComponentName" type="text" style="width: 250px;"></div>
+                    <div class="hidden"> <input class="field-width" id="Dependencies_{i}__KnownDependency_ComponentName" name="Dependencies[{i}].KnownDependency.ComponentName" type="text"></div>
                     <span class="field-validation-valid" data-valmsg-for="Dependencies[{i}].KnownDependency.ComponentName" data-valmsg-replace="true"></span>
-                    <select class="dropDownKD valid" data-val="true" data-val-required="The KnownDependenciesId field is required." id="Dependencies_{i}__KnownDependenciesId" name="Dependencies[{i}].KnownDependenciesId" onchange="javascript: DisplayComponentNameNewInputField(this.id)" style="width: 250px" aria-required="true" aria-invalid="false">
+                    <select class="dropDownKD valid field-width" data-val="true" data-val-required="The KnownDependenciesId field is required." id="Dependencies_{i}__KnownDependenciesId" name="Dependencies[{i}].KnownDependenciesId" onchange="javascript: DisplayComponentNameNewInputField(this.id)" aria-required="true" aria-invalid="false">
                         @{
                             var dependencies = Model.Dependencies; //existing KD in repo
                             if (Model.KnownDependencies != null)
@@ -246,8 +242,8 @@ else
                         }
                     </select>
                     <div class="pure-control-group new-known-dependency" id="newKD-Dependencies_{i}__KnownDependenciesId">
-                        <input class="pure-form valid" id="KDInputDependencies_{i}__KnownDependenciesId" type="text" style="width:250px;">
-                        <button class="return-to-dropdown" type="button" id="{i}" onclick="returnToDropdownFromKDInput(this.id)" title="Return to dropdown" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-times-circle"></i></button>
+                        <input class="pure-form valid field-width" id="KDInputDependencies_{i}__KnownDependenciesId" type="text">
+                        <button class="return-to-dropdown" type="button" id="{i}" onclick="returnToDropdownFromKDInput(this.id)" title="Return to dropdown"><i class="fa fa-times-circle"></i></button>
                     </div>
                 </th>
                 <th class="col pure-control-group">
@@ -258,14 +254,14 @@ else
                     </span>
                 </th>
                 <th class="col pure-control-group">
-                    <input class="form-control" type="date" id="Dependencies_{i}__.DateUpdated" name="Dependencies[{i}].DateUpdated" value="1/1/1900" />
+                    <input class="form-control" type="date" id="Dependencies_{i}__.DateUpdated" name="Dependencies[{i}].DateUpdated"/>
                     <span class="field-validation-valid text-danger"
                           data-valmsg-for="Dependencies[{i}].DateUpdated"
                           data-valmsg-replace="true">
                     </span>
                 </th>
                 <th>
-                    <button type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_{i}" title="Remove Dependency" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                    <button class="rem-btn" type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_{i}" title="Remove Dependency"><i class="fa fa-minus-circle"></i></button>
                 </th>
             </tr>
         </template>
@@ -281,7 +277,7 @@ else
             {
                 <tr class="row Dependencies-details" id="Dependencies_@i" name="Dependencies-details">
                     <th class="pure-control-group">
-                        <div style="display:none;"> @Html.TextBoxFor(m => m.Dependencies[i].KnownDependency.ComponentName, htmlAttributes: new { @style = "width: 250px;" })</div>
+                        <div class="hidden"> @Html.TextBoxFor(m => m.Dependencies[i].KnownDependency.ComponentName, htmlAttributes: new { @style = "width: 250px;" })</div>
                         @Html.ValidationMessageFor(m => m.Dependencies[i].KnownDependency.ComponentName)
                         @{
                             var knownDependenciesList = new SelectList(Model.KnownDependencies, "Id", "ComponentName", Model.Dependencies[i].KnownDependenciesId);
@@ -312,9 +308,9 @@ else
                         @Html.ValidationMessageFor(m => m.Dependencies[i].DateUpdated)
                     </th>
                     <th>
-                        <button type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_@i" title="Remove Dependency" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                        <button type="button" onclick="DepenremField(this.id);" id=" DependenciesBtn_@i" title="Remove Dependency" class="rem-btn"><i class="fa fa-minus-circle"></i></button>
                     </th>
-                    <th class="pure-control-group" style="display:none">
+                    <th class="pure-control-group hidden">
                         @Html.HiddenFor(m => m.Dependencies[i].Id);
                         @Html.HiddenFor(m => m.Dependencies[i].RepositoryId);
                         @Html.HiddenFor(m => m.Dependencies[i].KnownDependenciesId);
