--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -242,8 +242,8 @@ else
                         }
                     </select>
                     <div class="pure-control-group new-known-dependency" id="newKD-Dependencies_{i}__KnownDependenciesId">
-                        <input class="pure-form valid field-width" id="KDInputDependencies_{i}__KnownDependenciesId" type="text">
-                        <button class="return-to-dropdown" type="button" id="{i}" onclick="returnToDropdownFromKDInput(this.id)" title="Return to dropdown"><i class="fa fa-times-circle"></i></button>
+                        <input class="pure-form valid field-width" id="KDInputDependencies_{i}__KnownDependenciesId" type="text" style="width:250px;">
+                        <button class="return-to-dropdown" type="button" id="{i}" onclick="returnToDropdownFromKDInput(this.id)" title="Return to dropdown" style="background-color: white; border: none;"><i style="color:black;" class="fa fa-arrow-left"></i></button>
                     </div>
                 </th>
                 <th class="col pure-control-group">
