Removes the dummy variable in null casses for dependnencies and variable changes

--- a/Bonobo.Git.Server/Views/Repository/Create.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Create.cshtml
@@ -97,18 +97,18 @@
 
     <fieldset class="pure-control-group">
         <legend>
-            @Resources.SA
+            @Resources.ServiceAccount
         </legend>
         <table class="pure-table" id="service-account-table">
             <tr class="row">
-                <th class="col">@Resources.SA_Name</th>
-                <th class="col">@Resources.SA_PassLastUpdated</th>
-                <th class="col">@Resources.SA_InPassManager</th>
+                <th class="col">@Resources.ServiceAccount_Name</th>
+                <th class="col">@Resources.ServiceAccount_PassLastUpdated</th>
+                <th class="col">@Resources.ServiceAccount_InPassManager</th>
             </tr>
         </table>
 </fieldset>
     <div class="pure-control-group">
-        <button type="button" onclick=" newField();" class="pure-button pure-button-primary"> <i class="fa fa-plus-circle"></i> @Resources.SA_Add </button>
+        <button type="button" onclick=" newField();" class="pure-button pure-button-primary"> <i class="fa fa-plus-circle"></i> @Resources.ServiceAccount_Add </button>
     </div>
     <fieldset class="pure-control-group add-little-padding">
         <legend>
